2007-09-06  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_auto_shrink):
	Call gimp_rectangle_tool_rectangle_changed and recalculate handle
	sizes after 'Auto shrink selection'. Fixes bug #474344.

2007-09-06  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/contactsheet.scm: Preserve aspect ratio
	of original images. Center thumbnails in space above filename label.
	Added new sheet size of 1600x1200 pixels. Changed a dialog label.

2007-09-06  Simon Budig  <simon@gimp.org>

	* plug-ins/common/convmatrix.c: there is no need to mess
	with the selected channels within check_config(). Also fix
	bug with with copying its values into the chanmask
	in convolve_image()

	Fixes bug #472518

2007-09-06  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h: quick fix:
	raise the cell segment size as well as the number of possible
	segments to reduce the likelihood of a failing (make-vector)

	(yes, this is a hack and no proper fix)

2007-09-04  Simon Budig  <simon@gimp.org>

	* app/vectors/gimpbezierstroke.c: Fix initialization of the
	delta vectors. Fixes bug #473515

2007-09-04  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpparamspecs.c: remove unbalanced "*/"

	* app/core/gimpdrawable-transform.c
	* app/core/gimp-transform-resize.c: formatting.

2007-09-04  Simon Budig  <simon@gimp.org>

	* app/core/gimpparamspecs.c: fix NULL handling and formatting.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* configure.in: bump version to 2.4.0-rc3.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* Made 2.4.0-rc2 release.

	* app/Makefile.am (dist-dump-gimprc): added some sed voodoo to
	make sure the num-processors in the distributed gimprc and its
	manpage don't depend on the machine that does make dist.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-transform-region.c: Applied slightly reformatted